--- a/flocking/index.html
+++ b/flocking/index.html
@@ -19,7 +19,7 @@
 
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/controls.js"></script>
-    <script type="text/javascript" src="js/boid.js"></script>
+    <script type="text/javascript" src="js/boid2.js"></script>
 
     <style>
       body {
