--- a/swim-animation/index.html
+++ b/swim-animation/index.html
@@ -8,13 +8,10 @@
       content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
 
-    <script type="text/javascript" src="js/external/three.r96.js"></script>
+    <script type="text/javascript" src="js/external/three.js"></script>
     <script type="text/javascript" src="js/external/stats.min.js"></script>
     <script type="text/javascript" src="js/external/dat.gui.min.js"></script>
-    <script
-      type="text/javascript"
-      src="js/external/TrackballControls.js"
-    ></script>
+    <script type="text/javascript" src="js/external/OrbitControls.js"></script>
 
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/controls.js"></script>
