--- a/flocking/index.html
+++ b/flocking/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Three.js Boilerplate</title>
+    <title>Flocking</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
 
     <script type="text/javascript" src="js/external/three.js"></script>
     <script type="text/javascript" src="js/external/stats.min.js"></script>
