--- a/swim-animation/index.html
+++ b/swim-animation/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+      content="width=device-width, user-scalable=no,
+      minimum-scale=1.0, maximum-scale=1.0"
     />
 
     <script type="text/javascript" src="js/external/three.js"></script>
@@ -14,6 +15,7 @@
     <script type="text/javascript" src="js/external/OrbitControls.js"></script>
 
     <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/animation.js"></script>
     <script type="text/javascript" src="js/controls.js"></script>
 
     <style>
