--- a/flocking/index.html
+++ b/flocking/index.html
@@ -22,6 +22,14 @@
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/controls.js"></script>
     <script type="text/javascript" src="js/boid2.js"></script>
+    <script
+      type="text/javascript"
+      src="../swim-animation/js/animation.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="../swim-animation/js/controls.js"
+    ></script>
 
     <style>
       body {
