Fish model added

--- a/flocking/index.html
+++ b/flocking/index.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="js/external/stats.min.js"></script>
     <script type="text/javascript" src="js/external/dat.gui.min.js"></script>
     <script type="text/javascript" src="js/external/OrbitControls.js"></script>
+    <script type="text/javascript" src="js/external/GLTFLoader.js"></script>
 
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/controls.js"></script>
