Cached animation fix

--- a/swim-animation/index.html
+++ b/swim-animation/index.html
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="js/external/GLTFLoader.js"></script>
 
     <script type="text/javascript" src="js/main.js"></script>
-    <script type="text/javascript" src="js/animation.js"></script>
+    <script type="text/javascript" src="js/animationNoCache.js"></script>
     <script type="text/javascript" src="js/controls.js"></script>
 
     <style>
