--- a/flocking/index.html
+++ b/flocking/index.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="js/external/dat.gui.min.js"></script>
     <script type="text/javascript" src="js/external/OrbitControls.js"></script>
     <script type="text/javascript" src="js/external/GLTFLoader.js"></script>
+    <script type="text/javascript" src="js/external/simplex-noise.js"></script>
 
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/controls.js"></script>
