--- a/swim-animation/index.html
+++ b/swim-animation/index.html
@@ -17,7 +17,7 @@
 
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/animation.js"></script>
-    <script type="text/javascript" src="js/controls.js"></script>
+    <script type="text/javascript" src="js/animationControls.js"></script>
 
     <style>
       body {
