--- a/aquarium/index.html
+++ b/aquarium/index.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Three.js Boilerplate</title>
+    <title>Flocking</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, user-scalable=no,
-      minimum-scale=1.0, maximum-scale=1.0"
+      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
 
     <script type="text/javascript" src="js/external/three.js"></script>
     <script type="text/javascript" src="js/external/stats.min.js"></script>
     <script type="text/javascript" src="js/external/dat.gui.min.js"></script>
     <script type="text/javascript" src="js/external/OrbitControls.js"></script>
     <script type="text/javascript" src="js/external/GLTFLoader.js"></script>
+    <script type="text/javascript" src="js/external/simplex-noise.js"></script>
 
     <script type="text/javascript" src="js/main.js"></script>
-    <script type="text/javascript" src="js/animation.js"></script>
+    <script type="text/javascript" src="js/controls.js"></script>
+    <script type="text/javascript" src="js/boid2.js"></script>
+    <script type="text/javascript" src="js/animationWithCache.js"></script>
     <script type="text/javascript" src="js/animationControls.js"></script>
 
     <style>
