--- a/flocking/index.html
+++ b/flocking/index.html
@@ -23,7 +23,8 @@
 
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/controls.js"></script>
-    <script type="text/javascript" src="js/boid2.js"></script>
+    <script type="text/javascript" src="js/boids.js"></script>
+    <script type="text/javascript" src="js/algorithm.js"></script>
 
     <style>
       body {
