--- a/flocking/index.html
+++ b/flocking/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/controls.js"></script>
     <script type="text/javascript" src="js/boids.js"></script>
+    <script type="text/javascript" src="js/food.js"></script>
     <script type="text/javascript" src="js/algorithm.js"></script>
 
     <style>
