custom noise function, refactoring

--- a/flocking/index.html
+++ b/flocking/index.html
@@ -26,6 +26,7 @@
     <script type="text/javascript" src="js/boids.js"></script>
     <script type="text/javascript" src="js/food.js"></script>
     <script type="text/javascript" src="js/algorithm.js"></script>
+    <script type="text/javascript" src="js/other.js"></script>
 
     <style>
       body {
