--- a/flocking/index.html
+++ b/flocking/index.html
@@ -57,19 +57,55 @@
         border-radius: 1px;
         margin-right: 8px;
       }
+
+      div.arr {
+        display: inline-block;
+        margin: 0 0 3px 2px;
+        height: 2px;
+        width: 20px;
+        background-color: #aaa;
+      }
     </style>
   </head>
   <body>
     <div id="container">
       <div id="info">
-        <div id="sep"><span class="rect"></span><span></span></div>
-        <div id="ali"><span class="rect"></span><span></span></div>
-        <div id="coh"><span class="rect"></span><span></span></div>
-        <div id="bnd"><span class="rect"></span><span></span></div>
-        <div id="ran"><span class="rect"></span><span></span></div>
-        <div id="avd"><span class="rect"></span><span></span></div>
-        <div id="fed"><span class="rect"></span><span></span></div>
-        <div id="acc"><span class="rect"></span><span></span></div>
+        <div style="margin-bottom: 4px">
+          purple boid<br />
+          vectors:
+        </div>
+        <div id="sep">
+          <span class="rect"></span><span></span>
+          <div class="arr"></div>
+        </div>
+        <div id="ali">
+          <span class="rect"></span><span></span>
+          <div id="arro" class="arr"></div>
+        </div>
+        <div id="coh">
+          <span class="rect"></span><span></span>
+          <div class="arr"></div>
+        </div>
+        <div id="bnd">
+          <span class="rect"></span><span></span>
+          <div class="arr"></div>
+        </div>
+        <div id="ran">
+          <span class="rect"></span><span></span>
+          <div class="arr"></div>
+        </div>
+        <div id="avd">
+          <span class="rect"></span><span></span>
+          <div class="arr"></div>
+        </div>
+        <div id="fed">
+          <span class="rect"></span><span></span>
+          <div class="arr"></div>
+        </div>
+        <div id="acc">
+          <span class="rect"></span><span></span>
+          <div class="arr"></div>
+        </div>
       </div>
     </div>
     <script type="text/javascript">
