--- a/flocking/index.html
+++ b/flocking/index.html
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="js/food.js"></script>
     <script type="text/javascript" src="js/algorithm.js"></script>
     <script type="text/javascript" src="js/other.js"></script>
+    <script type="text/javascript" src="js/collision_functions.js"></script>
 
     <style>
       body {
@@ -70,7 +71,7 @@
   <body>
     <div id="container">
       <div id="info">
-        <div style="margin-bottom: 4px">
+        <div style="margin-bottom: 4px;">
           purple boid<br />
           vectors:
         </div>
