--- a/flocking/index.html
+++ b/flocking/index.html
@@ -81,7 +81,7 @@
         </div>
         <div id="ali">
           <span class="rect"></span><span></span>
-          <div id="arro" class="arr"></div>
+          <div class="arr"></div>
         </div>
         <div id="coh">
           <span class="rect"></span><span></span>
@@ -100,6 +100,14 @@
           <div class="arr"></div>
         </div>
         <div id="fed">
+          <span class="rect"></span><span></span>
+          <div class="arr"></div>
+        </div>
+        <div id="obs">
+          <span class="rect"></span><span></span>
+          <div class="arr"></div>
+        </div>
+        <div id="tes">
           <span class="rect"></span><span></span>
           <div class="arr"></div>
         </div>
