--- a/flocking/index.html
+++ b/flocking/index.html
@@ -30,11 +30,14 @@
     <script type="text/javascript" src="js/collision_functions.js"></script>
 
     <style>
+      html,
+      body {
+        background-color: #111;
+      }
       body {
         overflow: hidden;
         padding: 0;
         margin: 0;
-        background-color: #bbb;
         font-family: arial;
         font-size: 100%;
       }
@@ -45,7 +48,7 @@
         left: 11px;
         z-index: 10001;
 
-        color: #aaa;
+        color: #ccc;
         font-size: 13px;
         font-family: monospace;
       }
@@ -64,7 +67,7 @@
         margin: 0 0 3px 2px;
         height: 2px;
         width: 20px;
-        background-color: #aaa;
+        background-color: #ccc;
       }
     </style>
   </head>
