field visualizations on plane, refactor

--- a/flocking/index.html
+++ b/flocking/index.html
@@ -27,7 +27,8 @@
     <script type="text/javascript" src="js/food.js"></script>
     <script type="text/javascript" src="js/algorithm.js"></script>
     <script type="text/javascript" src="js/other.js"></script>
-    <script type="text/javascript" src="js/collision_functions.js"></script>
+    <script type="text/javascript" src="js/collision-functions.js"></script>
+    <script type="text/javascript" src="js/mesh-distance.js"></script>
 
     <style>
       html,
