experiment with swirl

--- a/flocking/index.html
+++ b/flocking/index.html
@@ -115,6 +115,10 @@
           <span class="rect"></span><span></span>
           <div class="arr"></div>
         </div>
+        <div id="exp">
+          <span class="rect"></span><span></span>
+          <div class="arr"></div>
+        </div>
         <div id="acc">
           <span class="rect"></span><span></span>
           <div class="arr"></div>
