--- a/flocking/index.html
+++ b/flocking/index.html
@@ -99,7 +99,7 @@
           <span class="rect"></span><span></span>
           <div class="arr"></div>
         </div>
-        <div id="avd">
+        <div id="esc">
           <span class="rect"></span><span></span>
           <div class="arr"></div>
         </div>
@@ -108,10 +108,6 @@
           <div class="arr"></div>
         </div>
         <div id="obs">
-          <span class="rect"></span><span></span>
-          <div class="arr"></div>
-        </div>
-        <div id="tes">
           <span class="rect"></span><span></span>
           <div class="arr"></div>
         </div>
