--- a/flocking/index.html
+++ b/flocking/index.html
@@ -49,7 +49,7 @@
         left: 11px;
         z-index: 10001;
 
-        color: #ccc;
+        color: #777;
         font-size: 13px;
         font-family: monospace;
       }
@@ -69,6 +69,15 @@
         height: 2px;
         width: 20px;
         background-color: #ccc;
+      }
+
+      .dg {
+        margin-right: 0px !important;
+      }
+
+      #container div canvas {
+        transform-origin: 0 0;
+        transform: scale(1.1);
       }
     </style>
   </head>
@@ -103,15 +112,11 @@
           <span class="rect"></span><span></span>
           <div class="arr"></div>
         </div>
-        <div id="fed">
-          <span class="rect"></span><span></span>
-          <div class="arr"></div>
-        </div>
         <div id="obs">
           <span class="rect"></span><span></span>
           <div class="arr"></div>
         </div>
-        <div id="exp">
+        <div id="dir">
           <span class="rect"></span><span></span>
           <div class="arr"></div>
         </div>
