UI changes, refactoring

--- a/flocking/index.html
+++ b/flocking/index.html
@@ -24,7 +24,6 @@
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/controls.js"></script>
     <script type="text/javascript" src="js/boids.js"></script>
-    <script type="text/javascript" src="js/food.js"></script>
     <script type="text/javascript" src="js/algorithm.js"></script>
     <script type="text/javascript" src="js/other.js"></script>
     <script type="text/javascript" src="js/collision-functions.js"></script>
@@ -108,15 +107,11 @@
           <span class="rect"></span><span></span>
           <div class="arr"></div>
         </div>
-        <div id="esc">
+        <div id="fle">
           <span class="rect"></span><span></span>
           <div class="arr"></div>
         </div>
         <div id="obs">
-          <span class="rect"></span><span></span>
-          <div class="arr"></div>
-        </div>
-        <div id="dir">
           <span class="rect"></span><span></span>
           <div class="arr"></div>
         </div>
