--- a/flocking/index.html
+++ b/flocking/index.html
@@ -19,14 +19,13 @@
     <script type="text/javascript" src="js/external/dat.gui.min.js"></script>
     <script type="text/javascript" src="js/external/OrbitControls.js"></script>
     <script type="text/javascript" src="js/external/GLTFLoader.js"></script>
-    <script type="text/javascript" src="js/external/simplex-noise.js"></script>
 
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/controls.js"></script>
     <script type="text/javascript" src="js/boids.js"></script>
     <script type="text/javascript" src="js/algorithm.js"></script>
     <script type="text/javascript" src="js/other.js"></script>
-    <script type="text/javascript" src="js/collision-functions.js"></script>
+    <script type="text/javascript" src="js/avoidance-field.js"></script>
     <script type="text/javascript" src="js/mesh-distance.js"></script>
 
     <style>
