--- a/index.html
+++ b/index.html
@@ -77,10 +77,75 @@
         transform-origin: 0 0;
         transform: scale(1.1);
       }
+
+      /* https://loading.io/css/ */
+      #loader {
+        position: absolute;
+        margin: auto;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+
+        width: 80px;
+        height: 80px;
+      }
+      #loader div {
+        box-sizing: border-box;
+        display: block;
+        position: absolute;
+        width: 64px;
+        height: 64px;
+        margin: 8px;
+        border: 8px solid #777786;
+        border-radius: 50%;
+        animation: loader 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+        border-color: #777786 transparent transparent transparent;
+      }
+      #loader div:nth-child(1) {
+        animation-delay: -0.45s;
+      }
+      #loader div:nth-child(2) {
+        animation-delay: -0.3s;
+      }
+      #loader div:nth-child(3) {
+        animation-delay: -0.15s;
+      }
+      @keyframes loader {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+      /* Safari */
+      @-webkit-keyframes spin {
+        0% {
+          -webkit-transform: rotate(0deg);
+        }
+        100% {
+          -webkit-transform: rotate(360deg);
+        }
+      }
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
     </style>
   </head>
   <body>
     <div id="container">
+      <div id="loader">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
       <div id="info">
         <div style="margin-bottom: 4px;">
           purple boid<br />
