link icons bugfix

--- a/index.html
+++ b/index.html
@@ -38,20 +38,22 @@
   <body>
     <div id="container">
       <div id="links">
-        <a href="https://www.youtube.com/watch?v=18ADVxr34BM"
-          ><img src="/css/icon-youtube.svg" />Project video<br
+        <a href="https://www.youtube.com/watch?v=lfsCrG2OydA" target="_blank"
+          ><img src="css/icon-youtube.svg" />project video<br
         /></a>
-        <a href="https://courses.cs.ut.ee/t/student_projects_results"
-          ><img src="/css/icon-pdf.svg" />Project poster<br
+        <a
+          href="https://courses.cs.ut.ee/t/student_projects_results"
+          target="_blank"
+          ><img src="css/icon-pdf.svg" />project poster<br
         /></a>
         <a
           href="https://comserv.cs.ut.ee/ati_thesis/datasheet.php?id=69758&year=2020"
-          ><img src="/css/icon-pdf.svg" />50-page thesis<br
+          ><img src="css/icon-pdf.svg" />50-page thesis<br
         /></a>
-        <a href="https://github.com/vetemaa/fish-simulation"
-          ><img src="/css/icon-github.svg" />GitHub repo<br
+        <a href="https://github.com/vetemaa/fish-simulation" target="_blank"
+          ><img src="css/icon-github.svg" />GitHub repo<br
         /></a>
-        <a id="submission" href="https://boids.tint.digital/"
+        <a id="submission" href="https://boids.tint.digital/" target="_blank"
           >demo in the state <br />
           of thesis submission <br />
           8 May 2020</a
