--- a/index.html
+++ b/index.html
@@ -37,17 +37,22 @@
   </head>
   <body>
     <div id="container">
+      <div id="title">
+        Simulating The Movement of Fish Schools <br />
+        Erik Martin Vetemaa
+      </div>
       <div id="links">
         <a href="https://www.youtube.com/watch?v=lfsCrG2OydA" target="_blank"
           ><img src="css/icon-youtube.svg" />project video<br
         /></a>
         <a
-          href="https://courses.cs.ut.ee/t/student_projects_results"
+          href="https://drive.google.com/file/d/1TttCWvZl1yizE_JfM0_-FiDXEK-i_KJo/view"
           target="_blank"
           ><img src="css/icon-pdf.svg" />project poster<br
         /></a>
         <a
-          href="https://comserv.cs.ut.ee/ati_thesis/datasheet.php?id=69758&year=2020"
+          href="https://comserv.cs.ut.ee/ati_thesis/datasheet.php?language=en"
+          target="_blank"
           ><img src="css/icon-pdf.svg" />50-page thesis<br
         /></a>
         <a href="https://github.com/vetemaa/fish-simulation" target="_blank"
@@ -71,38 +76,6 @@
         <div style="margin-bottom: 4px;">
           pink boid's<br />
           vector lengths:
-        </div>
-        <div id="sep">
-          <span class="rect"></span><span></span>
-          <div class="arr"></div>
-        </div>
-        <div id="ali">
-          <span class="rect"></span><span></span>
-          <div class="arr"></div>
-        </div>
-        <div id="coh">
-          <span class="rect"></span><span></span>
-          <div class="arr"></div>
-        </div>
-        <div id="bnd">
-          <span class="rect"></span><span></span>
-          <div class="arr"></div>
-        </div>
-        <div id="ran">
-          <span class="rect"></span><span></span>
-          <div class="arr"></div>
-        </div>
-        <div id="pre">
-          <span class="rect"></span><span></span>
-          <div class="arr"></div>
-        </div>
-        <div id="obs">
-          <span class="rect"></span><span></span>
-          <div class="arr"></div>
-        </div>
-        <div id="acc">
-          <span class="rect"></span><span></span>
-          <div class="arr"></div>
         </div>
       </div>
     </div>
