fullscreen button for mobile

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
           vector lengths:
         </div>
       </div>
+      <div id="fullscreen" onclick="fullscreen()">go fullscreen</div>
     </div>
     <script type="text/javascript">
       var vars = datGui();
