--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           ><img src="css/icon-pdf.svg" />project poster<br
         /></a>
         <a
-          href="https://comserv.cs.ut.ee/ati_thesis/datasheet.php?language=en"
+          href="https://comserv.cs.ut.ee/ati_thesis/datasheet.php?id=69758&year=2020"
           target="_blank"
           ><img src="css/icon-pdf.svg" />50-page thesis<br
         /></a>
@@ -68,7 +68,7 @@
         <div></div>
       </div>
       <div id="info">
-        <div style="margin-bottom: 4px;">
+        <div style="margin-bottom: 4px">
           pink boid's<br />
           vector lengths:
         </div>
